--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,11 @@ services:
     volumes:
       - ./src:/app
     command: "python3 manage.py runserver 0.0.0.0:8000"
+    depends_on:
+      - postgres
+  postgres:
+    image: postgres:16
+    environment:
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - "5432:5432"
