--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 django = "^4.2.5"
 black = "^23.9.1"
+psycopg = {extras = ["binary", "pool"], version = "^3.1.12"}
 
 
 [build-system]
